[gd_scene load_steps=5 format=2]

[ext_resource path="res://level/upgrade_manager.gd" type="Script" id=1]
[ext_resource path="res://ui/default_font.tres" type="DynamicFont" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://asset/Rubik_Bubbles/RubikBubbles-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 42
font_data = SubResource( 1 )

[node name="UpgradeManager" type="Node"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Shop" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Shop"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.423529 )

[node name="Title" type="Label" parent="CanvasLayer/Shop"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -349.5
margin_top = 58.0
margin_right = 349.5
margin_bottom = 118.0
custom_fonts/font = SubResource( 2 )
text = "SPACE BUGS ATTACK THE FARM"

[node name="Shop" type="Control" parent="CanvasLayer/Shop/Title"]
margin_left = 103.5
margin_top = 89.0
margin_right = 143.5
margin_bottom = 129.0

[node name="ScytheSizeButton" type="Button" parent="CanvasLayer/Shop/Title/Shop"]
margin_left = -20.0
margin_top = 20.0
margin_right = 253.0
margin_bottom = 55.0
custom_fonts/font = ExtResource( 2 )
text = "Upgrade Scythe Size"

[node name="Label" type="Label" parent="CanvasLayer/Shop/Title/Shop/ScytheSizeButton"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 27.0
margin_top = -14.5
margin_right = 67.0
margin_bottom = 14.5
custom_fonts/font = ExtResource( 2 )
text = "1"

[node name="ScythePowerButton" type="Button" parent="CanvasLayer/Shop/Title/Shop"]
margin_left = -20.0
margin_top = 83.0
margin_right = 253.0
margin_bottom = 118.0
custom_fonts/font = ExtResource( 2 )
text = "Upgrade Scythe Power"

[node name="Label" type="Label" parent="CanvasLayer/Shop/Title/Shop/ScythePowerButton"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 27.0
margin_top = -14.5
margin_right = 67.0
margin_bottom = 14.5
custom_fonts/font = ExtResource( 2 )
text = "1"

[node name="MoveSpeedButton" type="Button" parent="CanvasLayer/Shop/Title/Shop"]
margin_left = -20.0
margin_top = 145.0
margin_right = 253.0
margin_bottom = 180.0
custom_fonts/font = ExtResource( 2 )
text = "Upgrade Movement Speed"

[node name="Label" type="Label" parent="CanvasLayer/Shop/Title/Shop/MoveSpeedButton"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 27.0
margin_top = -14.5
margin_right = 67.0
margin_bottom = 14.5
custom_fonts/font = ExtResource( 2 )
text = "1"

[connection signal="pressed" from="CanvasLayer/Shop/Title/Shop/ScytheSizeButton" to="." method="_on_ScytheSizeButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Shop/Title/Shop/ScythePowerButton" to="." method="_on_ScythePowerButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Shop/Title/Shop/MoveSpeedButton" to="." method="_on_MoveSpeedButton_pressed"]
